Added description to plugin info.

--- a/addons/source-python/plugins/gungame/plugins/custom/gg_chicken_hunt/info.ini
+++ b/addons/source-python/plugins/gungame/plugins/custom/gg_chicken_hunt/info.ini
@@ -1,4 +1,5 @@
 verbose_name = "GG Chicken Hunt"
 author = "satoon101"
+description = "Level up only by killing chickens."
 version = "1.0"
 url = ""
