Added info.url as link to forum thread.

--- a/addons/source-python/plugins/gungame/plugins/custom/gg_chicken_hunt/info.ini
+++ b/addons/source-python/plugins/gungame/plugins/custom/gg_chicken_hunt/info.ini
@@ -2,4 +2,4 @@ verbose_name = "GG Chicken Hunt"
 author = "satoon101"
 description = "Level up only by killing chickens."
 version = "1.0.0"
-url = ""
+url = "https://forums.sourcepython.com/viewtopic.php?t=1630"
